-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0 Beta
-
None
-
Linux, Windows
-
3b8df0ea44b048b8fcc4317ffdfd074e2547a95e
Hide/show event is not delivered to child widgets when window (TLW) is minimized/restored. Those events should be emitted (like in Qt4), because it is very useful e.g. to start/stop timer. Of course paint event is not called any more when window is minimized, but the timer runs (hard to detect whether window is minimized).
- relates to
-
QTBUG-41312 [Reg 4->5] QMainWindow::showEvent is not called when the window is restored after being minimized
-
- Closed
-