src/widgets/kernel/qwidget_p.h
@@ -745,6 +745,8 @@ public:
 #ifndef QT_NO_OPENGL
     uint renderToTextureReallyDirty : 1;
 #endif
+    uint childrenHiddenByWState : 1;
+    uint childrenShownByExpose : 1;
 
     // *************************** Platform specific ************************************
 #if defined(Q_OS_WIN)
